--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="utf-8" />
     <title>Swap Me</title>
     <base href="/" />
@@ -10,6 +11,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <script src="https://accounts.google.com/gsi/client" async></script>
+
   </head>
   <body class="mat-typography" style="margin: 0">
     <app-root></app-root>
